syntax = "proto3";

package resume_service;
option go_package = "genproto/resume_service";

message ResumeWithID {
  string resume_id = 1;
}

message UserWithID {
  uint64 page = 1;
  uint64 limit = 2;
  string user_id = 3;
}

message Status {
  bool action = 1;
}

message ListRequest {
  uint64 page = 1;
  uint64 limit = 2;
  string job_title = 3;
  string job_location = 4;
  string job_type = 5;
  int64 salary = 6;
  string region = 7;
  int64 experience = 8;
}

message ListResumeResponse {
  repeated Resume resumes = 1;
  uint64 total_count = 2;
}

message Resume {
  string id = 1;
  string user_id = 2;
  string url = 3;
  uint64 salary = 5;
  string job_title = 6;
  string region = 7; // uzbekistan,
  string job_location = 8; // online, offline
  string job_type = 9; // part-time, full-time
  int64 experience = 10;
  string template = 11;
  string created_at = 12;
  string updated_at = 13;
}
